# matlab-subprocess-stdin

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TestSubprocess.m  build.m  buildfile.m  check_python_arch.m  cmake.m  compile.m  env_print.cpp  find_exe.m  find_or_build.m  macos_path.m  main.cpp  main.f90  main_java.m  main_python.m  stdin_sum_print.cpp  subprocess_run.m  subprocess_run_python.m  testUnit.m
.github/workflows/: ci.yml
gnu_octave/: ProcessBuilderExample1.java  subprocess_run_octave.m  subprocess_run_octave.m.txt
python/: TestSubprocessPython.m  subprocess_run_python.m
test/: TestSubprocess.m  main.f90
